# vector

./: CMakeLists.txt  LICENSE  Makefile  README.md
benchmark/: CMakeLists.txt  vector.cpp
test/: CMakeLists.txt
test/include/: Copyable.h  DefaultOnly.h  MoveOnly.h  NotConstructible.h  allocators.h  almost_satisfies_types.h  check_assertion.h  container_test_types.h  controlled_allocators.h  count_new.h  deduction_guides_sfinae_checks.h  double_move_tracker.h  emplace_constructible.h  increasing_allocator.h  min_allocator.h  operator_hijacker.h  sized_allocator.h  test_allocator.h  test_comparisons.h  test_container_comparisons.h  test_iterators.h  test_macros.h  type_algorithms.h
test/src/: access.pass.cpp  addressof.compile.pass.cpp  common.h  compare.pass.cpp  compare2.three_way.pass.cpp  constant_initialization.pass.cpp  contiguous.pass.cpp  get_allocator.pass.cpp  is_trivially_relocatable.cpp  iterator_concept_conformance.compile.pass.cpp  iterators.pass.cpp  range_concept_conformance.compile.pass.cpp  reverse_iterators.pass.cpp  trivial_relocation.pass.cpp  types.pass.cpp
test/src/vector.capacity/: capacity.pass.cpp  empty.pass.cpp  max_size.pass.cpp  reserve.pass.cpp  reserve_exceptions.pass.cpp  resize_size.pass.cpp  resize_size_exceptions.pass.cpp  resize_size_value.pass.cpp  resize_size_value_exceptions.pass.cpp  shrink_to_fit.pass.cpp  shrink_to_fit_exceptions.pass.cpp  size.pass.cpp  swap.pass.cpp
test/src/vector.cons/: assign_copy.pass.cpp  assign_initializer_list.pass.cpp  assign_iter_iter.pass.cpp  assign_move.pass.cpp  assign_size_value.pass.cpp  construct_default.pass.cpp  construct_iter_iter.pass.cpp  construct_iter_iter_alloc.pass.cpp  construct_size.pass.cpp  construct_size_value.pass.cpp  construct_size_value_alloc.pass.cpp  copy.pass.cpp  copy_alloc.pass.cpp  default.recursive.pass.cpp  default_noexcept.pass.cpp  dtor_noexcept.pass.cpp  exceptions.pass.cpp  initializer_list.pass.cpp  initializer_list_alloc.pass.cpp  move.pass.cpp  move_alloc.pass.cpp  move_assign_noexcept.pass.cpp  move_noexcept.pass.cpp  op_equal_initializer_list.pass.cpp
test/src/vector.data/: data.pass.cpp  data_const.pass.cpp
test/src/vector.erasure/: erase.pass.cpp  erase_if.pass.cpp
test/src/vector.modifiers/: assert.push_back.invalidation.pass.cpp  clear.pass.cpp  common.h  destroy_elements.pass.cpp  emplace.pass.cpp  emplace_back.pass.cpp  erase_iter.pass.cpp  erase_iter_iter.pass.cpp  (+9 more)
test/todo/: deduct.pass.cpp
(+6 files in other folders)
